--- a/ad/src/main/res/layout/fragment_admob_banner_ad.xml
+++ b/ad/src/main/res/layout/fragment_admob_banner_ad.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.gms.ads.AdView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_gravity="center_horizontal"
-    android:layout_height="wrap_content">
-</com.google.android.gms.ads.AdView>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
